--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -147,3 +147,24 @@ background: #eee;
     align-self: center;
     margin: 0;
 }
+#overlay{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 0;
+	background-color: rgba(0,0,0,0.5);
+	display: none;
+}
+#page_upload{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 77rem;
+	height: fit-content + 3rem;
+	z-index: 1;
+	transform: translate(-50%, -50%);
+	background-color: #dbdbdb;
+	border-radius: 5px;
+}
